Refactor Eslint + Prettier + Standard

--- a/typescript/.eslintrc
+++ b/typescript/.eslintrc
@@ -1,6 +1,9 @@
 {
   "root": true,
-  "extends": "standard-with-typescript",
+  "extends": [
+    "standard-with-typescript",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
