--- a/typescript/package.json
+++ b/typescript/package.json
@@ -31,12 +31,12 @@
     "eslint": "^8.19.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {}
+  }
 }
