Cambio Vitest por Jest

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -11,10 +11,8 @@
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "test": "jest",
-    "test:sec": "jest --runInBand",
-    "test:coverage": "jest --coverage --runInBand",
-    "test:watch": "jest --watchAll"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "TypeScript",
@@ -23,20 +21,18 @@
   "author": "joseluisgs",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "c8": "^7.11.3",
     "eslint": "^8.19.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.2",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.18.0"
   }
 }
