--- a/typescript/tsconfig.eslint.json
+++ b/typescript/tsconfig.eslint.json
@@ -1,9 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "src",
-    "tests", 
-    "tools", 
-    ".eslintrc.js"
-  ]
+  "include": ["src", "tests", "tools", ".eslintrc.js"]
 }
