--- a/typescript/.eslintrc
+++ b/typescript/.eslintrc
@@ -8,6 +8,7 @@
     "project": "./tsconfig.json"
   },
    "rules": {
+    "prettier/prettier": "error",
       "max-len": [
         "error",
         {
