--- a/typescript/package.json
+++ b/typescript/package.json
@@ -9,10 +9,17 @@
     "dev:run": "ts-node --files src/index.ts",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
+    "format": "prettier-standard --format",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier-standard --lint"
+    ]
   },
   "keywords": [
     "TypeScript",
@@ -26,10 +33,12 @@
     "@typescript-eslint/parser": "^5.30.5",
     "c8": "^7.11.3",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.19",
+    "prettier-standard": "^16.4.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
