Procesos Controller Mock

--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -56,5 +56,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts", "tests/controllers/ProcesosController.test.ts.back"],
 }
